--- a/assert/css/style.css
+++ b/assert/css/style.css
@@ -546,30 +546,214 @@ a {
 
 
 .schedule {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 360px;
+    background: linear-gradient(180deg, rgba(56, 29, 219, 0.05) 0%, rgba(56, 29, 219, 0.00) 100%);
+    padding-top: 160px;
+    margin-bottom: 240px;
+
+}
+
+.schedule-title-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 1140px;
 }
 
 .schedule-title {
+    color: #222;
+
+    font-family: Montserrat, serif;
+    font-size: 34px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 130%;
 }
 
 .tabs {
+    display: flex;
+    justify-content: space-between;
+    padding: 60px 0 44px 0;
+    gap: 30px;
 }
 
 .tab {
+    opacity: 0.2;
+    flex: 1;
+    padding: 10px 0;
+    border-bottom: 2px solid transparent;
+    cursor: pointer;
+}
+
+.tab.active {
+    opacity: 1;
+    border-bottom: 3px solid #381DDB;
+}
+
+.tab-day {
+    color: #381DDB;
+    font-feature-settings: 'liga' off, 'clig' off;
+
+    font-family: Montserrat, serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 38px;
+}
+
+.tab-day-month {
+    color: #381DDB;
+    font-feature-settings: 'liga' off, 'clig' off;
+
+    font-family: Montserrat, serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    opacity: 0.5;
+}
+
+.schedule-info {
+    width: 100%;
+    display: inline-flex;
+    padding-bottom: 40px;
+    flex-direction: column;
+    border-radius: 24px;
+    border: 1px solid #E0E0E0;
+}
+
+.schedule-header {
+    display: flex;
+    font-weight: bold;
+    padding: 40px;
+    gap: 30px;
+    background: rgba(56, 29, 219, 0.05);
+}
+
+.header-info {
+    color: #222;
+
+    font-family: Raleway, serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 38px;
+}
+
+.hr {
+    margin-top: 40px;
+    border-bottom: 1px solid #E0E0E0;
+    opacity: 0.2;
 }
 
 .event {
+    display: flex;
+    gap: 30px;
+    align-items: center;
+    margin: 40px 0 0 40px;
 }
 
 .event-time {
+    color: #222;
+    font-feature-settings: 'liga' off, 'clig' off;
+
+    font-family: Raleway, serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    max-width: 230px;
 }
 
 .event-description {
+    color: #222;
+    font-feature-settings: 'liga' off, 'clig' off;
+
+    font-family: Raleway, serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+    max-width: 370px;
+}
+
+.event-speakers {
+    display: flex;
+    gap: 32px;
+    flex-direction: column;
+    max-width: 270px;
+
+}
+
+.speaker {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.speaker-info {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.event-speakers-name {
+    color: #222;
+    font-feature-settings: 'liga' off, 'clig' off;
+
+    font-family: Raleway, serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+}
+
+.event-speakers-booth {
+    color: #222;
+    font-feature-settings: 'liga' off, 'clig' off;
+    font-family: Raleway, serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    opacity: 0.5;
+}
+
+.event-speakers-booth-code {
+    color: #222;
+    font-feature-settings: 'liga' off, 'clig' off;
+
+    font-family: Raleway, serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
 }
 
 .preview {
+    color: #222;
+    text-align: right;
+    font-feature-settings: 'liga' off, 'clig' off;
+
+    font-family: Montserrat, serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 8px;
+    margin-left: 100px;
+    width: 180px;
 }
 
 .live {
+    color: #FC5252;
+
 }
 
 .sell {
