--- a/assert/css/style.css
+++ b/assert/css/style.css
@@ -15,16 +15,28 @@ body {
 
 
 .header {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center top;
     background-image: url('../img/Img-fon.png');
+
+}
+
+.header-container {
+    width: 100%;
     display: flex;
     padding: 32px 0 32px 0;
     justify-content: center;
     gap: 371px;
     align-items: center;
-
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center top;
+    max-width: 1170px;
+    position: relative;
+    left: -4px;
 }
 
 .navbar {
@@ -48,6 +60,10 @@ body {
     font-style: normal;
     line-height: 20px;
     text-transform: uppercase;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    gap: 10px
 
 
 }
@@ -62,18 +78,19 @@ a {
 
 .get-tickets {
     display: flex;
-    padding: 18px 34px;
+    padding: 19px 38px;
     align-items: center;
     gap: 12px;
     border-radius: 8px;
     background: #ffffff;
-
     color: #381DDB;
     font-feature-settings: 'liga' off, 'clig' off;
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    margin-left: 18px;
+
 }
 
 .main-content {
@@ -91,6 +108,7 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center -123px;
+    margin-bottom: 212px;
 
 }
 
@@ -168,10 +186,14 @@ a {
 }
 
 .countdown {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    left: -8px;
 }
 
 .countdown-time {
-    text-align: center;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: #FFF;
     font-family: Montserrat, serif;
@@ -179,7 +201,7 @@ a {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin: 122px auto 53px auto;
+    margin: 80px;
     opacity: 0.3;
     letter-spacing: 15px;
 }
@@ -191,7 +213,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 100px 0 270px 0;
+    margin-bottom: 295px;
     gap: 60px
 
 }
@@ -199,7 +221,7 @@ a {
 .categories-content {
     display: flex;
     width: 100%;
-    max-width: 1140px;
+    max-width: 1170px;
 }
 
 .categories-logo {
@@ -234,8 +256,8 @@ a {
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    padding: 90px 120px 36px 60px;
+    gap: 34px;
+    padding: 90px 105px 36px 60px;
 
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease, background 0.5s ease;
@@ -294,7 +316,7 @@ a {
 .about-content {
     display: flex;
     width: 100%;
-    max-width: 996px;
+    max-width: 1032px;
     position: relative;
     gap: 70px;
 }
@@ -361,7 +383,7 @@ a {
     font-weight: 700;
     line-height: normal;
     display: flex;
-    padding: 18px 34px;
+    padding: 16px 34px;
     align-items: center;
     gap: 12px;
     border-radius: 8px;
@@ -379,7 +401,7 @@ a {
 .singers-content {
     display: flex;
     width: 100%;
-    max-width: 1140px;
+    max-width: 1170px;
     position: relative;
     gap: 30px;
 }
@@ -388,7 +410,7 @@ a {
     display: flex;
     flex-direction: column;
     gap: 80px;
-    padding-top: 176px;
+    padding-top: 174px;
     align-items: flex-start;
 
 
@@ -426,7 +448,10 @@ a {
 }
 
 .btn-singer {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 11px;
     padding: 18px 34px;
     border-radius: 8px;
     background: #381DDB;
@@ -440,6 +465,7 @@ a {
     border: none;
     cursor: pointer;
     white-space: nowrap;
+
 }
 
 .singer-images {
@@ -489,7 +515,7 @@ a {
 .singer-container3 {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
-    transform: translatey(111px);
+    transform: translatey(100px);
 }
 
 .singer-container4 {
@@ -551,8 +577,8 @@ a {
     align-items: center;
     margin-top: 360px;
     background: linear-gradient(180deg, rgba(56, 29, 219, 0.05) 0%, rgba(56, 29, 219, 0.00) 100%);
-    padding-top: 160px;
-    margin-bottom: 240px;
+    padding-top: 180px;
+    margin-bottom: 233px;
 
 }
 
@@ -560,7 +586,7 @@ a {
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-width: 1140px;
+    max-width: 1170px;
 }
 
 .schedule-title {
@@ -576,14 +602,14 @@ a {
 .tabs {
     display: flex;
     justify-content: space-between;
-    padding: 60px 0 44px 0;
+    padding: 62px 0 44px 0;
     gap: 30px;
 }
 
 .tab {
     opacity: 0.2;
     flex: 1;
-    padding: 10px 0;
+    padding-bottom: 19px;
     border-bottom: 2px solid transparent;
     cursor: pointer;
 }
@@ -768,7 +794,7 @@ a {
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-width: 1140px;
+    max-width: 1170px;
     position: relative;
     gap: 60px;
 }
@@ -787,7 +813,7 @@ a {
     display: flex;
     gap: 30px;
     width: 100%;
-    max-width: 1140px;
+    max-width: 1170px;
 }
 
 .component-sell-block {
@@ -796,7 +822,7 @@ a {
     justify-content: center;
     align-items: center;
     gap: 30px;
-    padding: 30px 104px;
+    padding: 23px 103px;
     border-radius: 20px;
     background: #FFF;
     box-shadow: 0 20px 100px 0 rgba(34, 34, 34, 0.15);
@@ -867,10 +893,10 @@ a {
 
 .sponsors {
     display: flex;
-    gap: 70px;
+    gap: 60px;
     flex-direction: column;
     align-items: center;
-    margin-top: 240px;
+    margin-top: 244px;
 }
 
 .sponsors-title {
@@ -887,9 +913,9 @@ a {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, auto);
-    gap: 60px 0;
+    gap: 60px 34px;
     width: 100%;
-    max-width: 1140px;
+    max-width: 1170px;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
@@ -904,7 +930,7 @@ a {
 
 .btn-sponsors {
     display: inline-flex;
-    padding: 18px 34px;
+    padding: 16px 33px;
     align-items: center;
     gap: 12px;
     border-radius: 8px;
@@ -918,7 +944,7 @@ a {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin: 0 auto;
+    margin: 22px auto;
 }
 
 .testimonials {
@@ -926,8 +952,8 @@ a {
     gap: 61px;
     flex-direction: column;
     align-items: center;
-    margin-top: 240px;
-    margin-bottom: 100px;
+    margin-top: 217px;
+    margin-bottom: 165px;
 }
 
 .testimonials-title {
@@ -963,7 +989,7 @@ a {
     align-items: flex-start;
     flex-direction: column;
     background-color: rgba(34, 34, 34, 0.03);
-    padding: 20px 60px 115px 60px;
+    padding: 20px 60px 85px 60px;
 }
 
 .testimonial-text {
@@ -979,8 +1005,16 @@ a {
     opacity: 0.7;
 }
 
+.quotes-open {
+    position: relative;
+
+    left: -30px;
+}
+
 .quotes-close {
+    position: relative;
     margin-left: auto;
+    left: 29px;
 }
 
 .testimonial-author {
@@ -1001,6 +1035,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 5px;
 }
 
 
@@ -1034,7 +1069,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 60px;
+    gap: 30px;
     margin-bottom: 240px;
     background: linear-gradient(180deg, rgba(252, 82, 82, 0.05) 0%, rgba(252, 82, 82, 0.00) 100%);
 }
@@ -1042,8 +1077,8 @@ a {
 .best-shots-content {
     display: flex;
     width: 100%;
-    max-width: 1140px;
-    padding: 160px 0 60px 0;
+    max-width: 1170px;
+    padding: 160px 0 0 0;
 }
 
 .best-shots-title {
@@ -1063,21 +1098,25 @@ a {
 .btn-best-shots1 {
     position: absolute;
     border-radius: 50%;
-    left: 760px;
-    bottom: -270px;
+    left: 772px;
+    bottom: -245px;
     z-index: 1;
     width: 56px;
     aspect-ratio: 1/1;
+    outline: none;
+    border: 0;
 }
 
 .btn-best-shots2 {
     position: absolute;
     border-radius: 50%;
-    right: 760px;
-    bottom: -270px;
+    right: 772px;
+    bottom: -245px;
     z-index: 1;
     width: 56px;
     aspect-ratio: 1/1;
+    outline: none;
+    border: 0;
 }
 
 .best-shots-gallery {
@@ -1093,6 +1132,7 @@ a {
 }
 
 .best-shots-card-img {
+    margin-bottom: 21px;
 }
 
 .best-shots-card-info {
@@ -1106,6 +1146,7 @@ a {
     font-weight: 700;
     line-height: normal;
     display: flex;
+    justify-content: center;
     flex-direction: column;
     gap: 8px;
 }
@@ -1162,7 +1203,7 @@ a {
     flex-direction: column;
     align-items: flex-start;
     background: #381DDB;
-    padding: 120px 280px 220px 80px;
+    padding: 120px 273px 0 72px;
 
 }
 
@@ -1172,12 +1213,12 @@ a {
     font-size: 34px;
     font-style: normal;
     font-weight: 700;
-    line-height: 130%;
+    line-height: 130%;    margin-bottom: 8px;
 }
 
 .contact-info-description {
     color: #FFF;
-    margin-bottom: 82px;
+    margin-bottom: 39px;
     font-family: Raleway, serif;
     font-size: 24px;
     font-style: normal;
@@ -1201,7 +1242,7 @@ a {
     line-height: normal;
     display: flex;
     align-items: center;
-    gap: 4px;
+    gap: 8px;
 }
 
 .contact-form {
@@ -1245,15 +1286,12 @@ a {
     border-bottom: 2px solid #381DDB;
 }
 
-/* Когда элемент в фокусе или его родительский контейнер в фокусе, меняем цвет label
-.form-label + .form-input:focus{
-    color: #381DDB; /* Синий цвет для текста label
-}*/
 .btn-contact {
     display: flex;
     padding: 18px 34px;
     justify-content: center;
     align-items: center;
+    margin-top: 20px;
     gap: 12px;
     align-self: stretch;
     border-radius: 8px;
@@ -1281,7 +1319,7 @@ a {
     border-bottom: 2px solid #E0E0E0;
     width: 570px;
     min-height: 40px;
-    margin-bottom: 30px;
+    margin-bottom: 22px;
 }
 
 .form-input:focus {
@@ -1298,16 +1336,16 @@ textarea.form-input {
     justify-content: center;
     background: #000;
     gap: 55px;
-    padding-bottom: 35px;
+    padding-bottom: 26px;
     padding-top: 40px;
 }
 
 .footer-content {
     display: flex;
     width: 100%;
-    max-width: 1140px;
+    max-width: 1175px;
     flex-direction: column;
-    gap: 55px
+    gap: 47px
 }
 
 .footer-content-info {
@@ -1356,7 +1394,7 @@ textarea.form-input {
     color: #FFF;
     text-align: right;
     font-feature-settings: 'liga' off, 'clig' off;
-    margin-left: 126px;
+
     font-family: Raleway, serif;
     font-size: 12px;
     font-style: normal;
