--- a/assert/css/styletablet.css
+++ b/assert/css/styletablet.css
@@ -32,15 +32,15 @@
     }
 
     .about-image1 {
-        height: 400px;
-        width: 400px;
+        /*height: 400px;
+        width: 400px;*/
         top: -40px;
         left: 20px;
     }
 
     .about-image2 {
-        height: 400px;
-        width: 400px;
+       /* height: 400px;
+        width: 400px;*/
         margin-left: 50px;
     }
 
@@ -57,9 +57,8 @@
     }
 
     .singers-content {
-        flex-direction: row-reverse;
+        flex-direction:column-reverse;
         padding-left: 20px;
-        gap: 0;
     }
 
     .singers-content-info {
@@ -74,7 +73,6 @@
     }
 
     .singer-container {
-        width: 90%;
         box-shadow: 0 2px 2px 0 rgba(56, 29, 219, 0.01);
     }
 
@@ -84,12 +82,7 @@
         filter: blur(50px);
     }
 
-    .singer-container img {
-        width: 100%;
-        height: auto;
-    }
-
-    .singer-container1 {
+    /*.singer-container1 {
         transform: translateY(80px);
     }
 
@@ -104,7 +97,7 @@
     .singer-container4 {
         transform: translateY(-70px);
         left: -12px;
-    }
+    }*/
 
     .schedule-title {
         padding-left: 20px;
