`feat: extended functional catalog and add a new page`

--- a/assert/css/stylemobile.css
+++ b/assert/css/stylemobile.css
@@ -3,10 +3,7 @@
         position: relative;
         justify-content: flex-start;
         padding-left: 20px;
-    }
-
-    .header-container {
-        position: relative;
+        gap: 100px;
     }
 
     .burger-checkbox {
